--- a/css/media.css
+++ b/css/media.css
@@ -8,7 +8,12 @@
 
   .text-us-section { margin-right: 0; }
 
-  .about-us__wrapper { flex-direction: column; }
+  .about-us__wrapper {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+  }
 
   .about-us__block {
     width: 100%;
@@ -74,20 +79,34 @@
     padding-top: 90px;
     width: calc(100% + 30px);
     z-index: 100;
-    transform: translateX(-150%);
+    -webkit-transform: translateX(-150%);
+        -ms-transform: translateX(-150%);
+            transform: translateX(-150%);
+    -webkit-transition: -webkit-transform 0.3s ease-in-out;
+    transition: -webkit-transform 0.3s ease-in-out;
+    -o-transition: transform 0.3s ease-in-out;
     transition: transform 0.3s ease-in-out;
+    transition: transform 0.3s ease-in-out, -webkit-transform 0.3s ease-in-out;
     background-color: #fff;
-    box-shadow: 5px 0 15px -5px rgba(0, 0, 0, .8);
+    -webkit-box-shadow: 5px 0 15px -5px rgba(0, 0, 0, .8);
+            box-shadow: 5px 0 15px -5px rgba(0, 0, 0, .8);
   }
 
   .header__nav--active {
     display: block;
-    transform: none;
+    -webkit-transform: none;
+        -ms-transform: none;
+            transform: none;
   }
 
   .nav__list {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column
   }
 
   .nav__list-item { margin-bottom: 20px; }
@@ -179,8 +198,13 @@
 
 @media (max-width: 1020px) {
   .footer__container {
-    flex-direction: column;
-    align-items: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
   }
 
   .footer__left { padding-top: 0; }
@@ -192,7 +216,9 @@
   .footer__nav-list {display: none; }
 
   .text-us-section {
-    order: -1;
+    -webkit-box-ordinal-group: 0;
+        -ms-flex-order: -1;
+            order: -1;
     margin-bottom: 50px;
   }
 
@@ -251,7 +277,12 @@
 
   .consult__list-item:last-child { margin-right: 0; }
 
-  .block { flex-direction: column; }
+  .block {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+  }
 
   .block__wrapper { width: 100%; }
 
@@ -262,7 +293,9 @@
   .block__picture {
     width: 100%;
     height: 284px;
-    order: -1;
+    -webkit-box-ordinal-group: 0;
+        -ms-flex-order: -1;
+            order: -1;
     margin-bottom: 35px;
   }
 
@@ -283,7 +316,11 @@
 
   .consult__list-item:not(:last-child) { margin-right: 155px; }
 
-  .footer__container { align-items: baseline; }
+  .footer__container {
+    -webkit-box-align: baseline;
+    -ms-flex-align: baseline;
+    align-items: baseline;
+  }
 }
 
 @media (max-width: 765px) {
@@ -328,8 +365,13 @@
   }
 
   .description {
-    flex-direction: column;
-    align-items: baseline;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: baseline;
+        -ms-flex-align: baseline;
+            align-items: baseline;
     padding: 0;
     color: #333;
     background: none;
@@ -345,8 +387,12 @@
   }
 
   .description__link {
-    align-self: center;
+    -ms-flex-item-align: center;
+        -ms-grid-row-align: center;
+        align-self: center;
     color: var(--main-color);
+    -webkit-transition: color .5s ease-in-out;
+    -o-transition: color .5s ease-in-out;
     transition: color .5s ease-in-out;
   }
 
@@ -356,9 +402,17 @@
 
   .faq__list-item-text {max-width: 75%; }
 
-  .footer__container { align-items: center; }
+  .footer__container {
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+  }
 
-  .form { align-items: center; }
+  .form {
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+  }
 
   .form__input {
     max-width: 290px;
@@ -369,7 +423,12 @@
 
   .text-us-section__title { text-align: center; }
 
-  .form__block { flex-direction: column; }
+  .form__block {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+  }
 
   .form__btn { margin-bottom: 25px; }
 
@@ -451,7 +510,8 @@
 
   .description__link {
     max-width: 162px;
-    align-self: flex-start;
+    -ms-flex-item-align: start;
+        align-self: flex-start;
     padding: 10px 40px;
     font-size: 12px;
     line-height: 15px;
@@ -566,6 +626,11 @@
     height: 20px;
   }
 
+  .accordion__content {
+    font-size: 14px;
+    line-height: 28px;
+  }
+
   .footer {
     padding-top: 32px;
     padding-bottom: 28px;
@@ -614,8 +679,12 @@
   .checkbox { margin-bottom: 0; }
 
   .footer__nav {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
   }
 
   .social {
